Try to support JDK 8+ (#2074)
* Try to support JDK 8+